<resources>
    <string name="app_name">Healthy Care</string>
    <string name="vegetable_bg">vegetable_bg</string>
    <string name="quote">When do you think people die? When they are shot through the heart by the bullet of a pistol? No. When they are ravaged by an incurable disease? No. When they drink a soup made from a poisonous mushroom!? No! It’s when… they are FORGOTTEN.</string>
    <string name="author">- Dr. Hiluluk</string>
    <string name="back">back</string>
    <string name="height">Height</string>
    <string name="_0">0</string>
    <string name="cm">cm</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
    <string name="age">Age</string>
    <string name="years_old">Years old</string>
    <string name="kg_m">kg/m</string>
    <string name="_2">2</string>
    <string name="empty">-</string>
    <string name="calculate">Calculate</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="add_info_text">Please provide some information to customize the experience for you…</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_hint">Enter your weight in Kg</string>
    <string name="workout_hint">Your daily work out time in min/day</string>
    <string name="wakeup_hint">Your wake up time</string>
    <string name="sleeping_hint">Your Sleep time</string>
    <string name="edit_info_text">Edit Your Information</string>
    <string name="notif_setting_header">Notification Settings</string>
    <string name="custom_intake_hint">Enter your custom intake target in ml</string>
    <string name="notif_messsage_hint">Notification Message</string>
    <string name="notif_tone_hint">Notification Tone</string>
    <string name="notif_freq_hint">Notification Frequency</string>

    <!-- Sleep -->
    <!-- Button labels -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- Sleep quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <!-- Toast to play after Clear button has been pressed -->
    <string name="cleared_message">All your data is gone forever.</string>
</resources>