<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>

        <variable
            name="sleepTrackerViewModel"
            type="com.example.capstone_healthycare.ui.sleep.tracker.SleepTrackerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.sleep.Sleep">

        <ImageButton
            android:id="@+id/btnBack"
            style="@style/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/water_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sleep Tracker"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnBack" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/water_title">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/clear_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stop_button">


                <TextView
                    android:id="@+id/textview"
                    android:layout_marginStart="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{sleepTrackerViewModel.nightsString}" />
            </ScrollView>


            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> sleepTrackerViewModel.onStartTracking()}"
                android:text="@string/start"
                app:layout_constraintBaseline_toBaselineOf="@id/stop_button"
                app:layout_constraintEnd_toStartOf="@+id/stop_button"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/stop"
                android:onClick="@{() -> sleepTrackerViewModel.onStopTracking()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:background="@color/colorPrimary"
                android:onClick="@{() -> sleepTrackerViewModel.onClear()}"
                android:enabled="@{sleepTrackerViewModel.clearButtonVisible}"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

