<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.CapstoneHealthyCare">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Healthy Care">

            <ImageView
                android:contentDescription="@string/vegetable_bg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/vegetables_icon"
                android:layout_gravity="center|end"
                android:layout_marginEnd="15dp"
                app:layout_collapseMode="parallax"/>
            <ImageView
                android:contentDescription="@string/vegetable_bg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/healthy_icon"
                android:scaleType="centerCrop"
                android:layout_gravity="start"
                android:layout_marginStart="75dp"
                android:layout_marginTop="15dp"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvQuote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/quote" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:layout_marginBottom="16dp"
                    android:layout_below="@+id/tvQuote"
                    tools:text="@string/author" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFood"
                style="@style/cardview_menu">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp">

                    <TextView
                        style="@style/title_menu"
                        android:text="Food Recipe"
                        android:textColor="#1FB706" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvWater"
                style="@style/cardview_menu">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp">

                    <TextView
                        android:id="@+id/water"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:text="Water"
                        android:textColor="#4FA0FF"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />



                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvBMI"
                style="@style/cardview_menu">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp">
                    <TextView
                        android:text="BMI Calculator"
                        style="@style/title_menu"
                        android:textColor="#FFA944"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSleep"
                style="@style/cardview_menu">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp">
                    <TextView
                        android:text="Sleep Tracker"
                        style="@style/title_menu"
                        android:textColor="#AA44FA"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>